[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/fight_data_creator/inspector/box_editor/BoxEditorList.gd" type="Script" id=1]

[node name="BoxEditorList" type="WindowDialog"]
anchor_right = 0.566406
anchor_bottom = 0.588333
window_title = "Boxes"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 65.0
margin_bottom = 24.0

[node name="BoxItemsContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 65.0

[node name="AddBoxDataButton" type="Button" parent="ScrollContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 65.0
margin_bottom = 24.0
text = "Add Box"

[connection signal="about_to_show" from="." to="." method="_on_BoxEditorList_about_to_show"]
[connection signal="button_up" from="ScrollContainer/VBoxContainer/AddBoxDataButton" to="." method="_on_AddBoxDataButton_button_up"]
